tests/css/media/range/error/invalid_comparison/mod.rs
//! Tests auto-converted from "sass-spec/spec/css/media/range/error/invalid_comparison"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::precision;

// Ignoring "gte", tests with expected error not implemented yet.

// Ignoring "lte", tests with expected error not implemented yet.

// Ignoring "range_gte", tests with expected error not implemented yet.
